--- a/notebooks/data.ipynb
+++ b/notebooks/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "3f98a321-2054-4702-aeaf-55e80f0dfc90",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "9f3b35b9-9238-465d-b877-a1b60fe38611",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "80947c62-0988-4eb5-9b8c-6dec274f3437",
    "metadata": {
     "scrolled": true
@@ -67,7 +67,7 @@
        "  'supplier': ['condo 1 queen bed with sofa bed kitchen']}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "3d5a89b8-c18c-4dc0-af8f-83381adbdcfd",
    "metadata": {},
    "outputs": [],
@@ -89,13 +89,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "id": "cc75776d-2373-4cfb-a2db-057605ee8c04",
    "metadata": {},
    "outputs": [],
    "source": [
     "ignore_words = [\n",
-    " 'a',\n",
     " 'access',\n",
     " 'accessible',\n",
     " 'air',\n",
@@ -184,12 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "id": "a664e47b-a9ed-4df4-8db7-dd2e62d3204a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def analyze_strings(data, word_to_check):\n",
+    "    if not word_to_check:\n",
+    "        return True\n",
     "    s = data['s'].lower()\n",
     "    r = data['r'].lower()\n",
     "    \n",
@@ -205,6 +206,8 @@
     "    if starts_with_word:\n",
     "        w_index = r_words.index(word_to_check[-1])\n",
     "        check_index = w_index+1\n",
+    "        if check_index >= len(r_words):\n",
+    "            print(data, word_to_check)\n",
     "        if r_words[check_index] != s_words[0]:\n",
     "            return False\n",
     "\n",
@@ -221,79 +224,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 58,
    "id": "eddea4f6-0fe5-4130-b28c-ce99b7003f82",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.82 twin room \t double or twin room ['double', 'or']\n",
-      "0.71 twin room 2 twin beds \t double or twin room ['double', 'or']\n",
-      "0.74 twin room \t deluxe twin room ['deluxe']\n",
-      "0.90 suite city view \t deluxe suite city view ['deluxe']\n",
-      "0.70 comfort double room \t comfort double room ensuite ['ensuite']\n",
-      "0.74 twin room \t deluxe twin room ['deluxe']\n",
-      "0.81 villa \t deluxe villa ['deluxe']\n",
-      "0.74 twin room \t deluxe twin room ['deluxe']\n",
-      "0.77 tranquil studio double \t tranquil studio double guest room 1 king city view ['guest', 'room', '1', 'king', 'city', 'view']\n",
-      "0.82 twin room \t double or twin room ['double', 'or']\n",
-      "0.78 standard double or twin room \t standard double or twin room with balcony ['with', 'balcony']\n",
-      "0.93 twin room multiple beds non smoking \t deluxe twin room multiple beds non smoking ['deluxe']\n",
-      "0.76 double room 1 double bed smoking \t business double room 1 double bed smoking ['business']\n",
-      "0.96 suite est \t deluxe suite est ['deluxe']\n",
-      "0.83 suite 2 bedrooms sea view \t executive suite 2 bedrooms sea view ['executive']\n",
-      "0.80 studio suite \t family studio suite ['family']\n",
-      "0.80 double or twin room \t deluxe double or twin room ['deluxe']\n",
-      "0.82 twin room \t double or twin room ['double', 'or']\n",
-      "0.87 suite 1 king bed balcony sea view \t executive suite 1 king bed balcony sea view ['executive']\n",
-      "0.87 junior suite \t deluxe junior suite ['deluxe']\n",
-      "0.79 family room \t deluxe family room ['deluxe']\n",
-      "0.86 room 08 \t economy triple room 08 ['economy', 'triple']\n",
-      "0.85 room 04 \t economy triple room 04 ['economy', 'triple']\n",
-      "0.87 room 02 \t economy double room 02 ['economy', 'double']\n",
-      "0.80 room 12 \t family quadruple room 12 ['family', 'quadruple']\n",
-      "0.82 room 01 \t economy quadruple room 01 ['economy', 'quadruple']\n",
-      "0.71 luxury loft \t luxury loft 1 king bed with sofa bed ['1', 'king', 'bed', 'with', 'sofa', 'bed']\n",
-      "0.71 triple room \t triple room with balcony ['with', 'balcony']\n",
-      "0.89 suite 1 bedroom city view \t family suite 1 bedroom city view ['family']\n",
-      "0.70 studio \t deluxe double studio ['deluxe', 'double']\n",
-      "0.79 studio \t studio apartment ['apartment']\n",
-      "0.79 studio \t studio apartment ['apartment']\n",
-      "0.79 studio \t studio apartment ['apartment']\n",
-      "0.90 room 2 double beds non smoking \t deluxe room 2 double beds non smoking ['deluxe']\n",
-      "0.90 room 1 king bed non smoking \t deluxe room 1 king bed non smoking ['deluxe']\n",
-      "0.90 room 1 king bed non smoking \t deluxe room 1 king bed non smoking ['deluxe']\n",
-      "0.70 studio \t deluxe double studio ['deluxe', 'double']\n",
-      "0.82 twin room \t double or twin room ['double', 'or']\n",
-      "0.82 standard double room single use \t double room single use balcony ['balcony']\n",
-      "0.75 classic room \t classic room 1 king bed ['1', 'king', 'bed']\n",
-      "0.79 family room \t deluxe family room ['deluxe']\n",
-      "0.82 twin room \t double or twin room ['double', 'or']\n",
-      "0.88 apartment 2 bedrooms sea view \t family apartment 2 bedrooms sea view ['family']\n",
-      "0.89 apartment 2 bedrooms garden view \t family apartment 2 bedrooms garden view ['family']\n",
-      "0.93 bungalow beachfront \t family bungalow beachfront ['family']\n",
-      "0.80 triple room \t deluxe triple room ['deluxe']\n",
-      "0.73 studio \t family studio ['family']\n",
-      "0.73 comfort room \t comfort room 1 king bed ['1', 'king', 'bed']\n",
-      "0.72 deluxe double room \t deluxe double room balcony ['balcony']\n",
-      "0.72 deluxe double room \t deluxe double room balcony ['balcony']\n",
-      "0.77 deluxe studio \t deluxe studio balcony ['balcony']\n",
-      "0.77 deluxe studio \t deluxe studio balcony ['balcony']\n",
-      "0.92 junior suite \t double junior suite ['double']\n",
-      "0.71 triple room \t triple room with balcony ['with', 'balcony']\n",
-      "0.82 twin room \t double or twin room ['double', 'or']\n",
-      "0.81 lodge \t standard room 1 king bed lodge ['standard', 'room', '1', 'king', 'bed']\n",
-      "0.71 suite 1 bedroom \t executive suite 1 bedroom ['executive']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "all_names = [name for hid in range(len(clean_data)) for name in clean_data[hid][\"supplier\"] + clean_data[hid][\"reference\"]]\n",
     "vectorizer = TfidfVectorizer(stop_words='english').fit(all_names)\n",
     "\n",
     "# Identify likely matches by cosine similarity within each hotel\n",
+    "\n",
+    "good_pairs = set()\n",
+    "bad_pairs = set()\n",
     "\n",
     "words_not_matching = []\n",
     "threshold = 0.7\n",
@@ -305,11 +247,11 @@
     "        highest_score = 0\n",
     "        highest_match = {}\n",
     "        for j, ref_name in enumerate(reference):\n",
-    "            if sims[i,j] > highest_score:\n",
+    "            if sims[i,j] >= highest_score:\n",
     "                highest_match = {\"s\": sup_name, \"r\": ref_name}\n",
     "                highest_score = sims[i,j]\n",
     "\n",
-    "        if highest_score >= 0.7 and highest_score<0.9999999999:\n",
+    "        if highest_score >= 0.5:# and highest_score<0.9999999999:\n",
     "            r_words = highest_match[\"r\"].split()\n",
     "            no_match = [w for w in r_words if w not in highest_match[\"s\"].split()]\n",
     "            no_match_count = len(no_match)\n",
@@ -319,10 +261,14 @@
     "            # print(r_words, no_match)\n",
     "            if not no_match_count:\n",
     "                # print(f\"{highest_score:.2f}\", highest_match, no_match)\n",
-    "                pass\n",
-    "            else:\n",
     "                if analyze_strings(highest_match, no_match):\n",
-    "                    print(f\"{highest_score:.2f}\", highest_match[\"s\"], \"\\t\", highest_match[\"r\"], no_match ,)\n",
+    "                    # print(f\"{highest_score:.2f}\", highest_match[\"s\"], \"\\t\", highest_match[\"r\"], no_match ,)\n",
+    "                    good_pairs.add((highest_match[\"s\"], highest_match[\"r\"], 1 ))\n",
+    "                    continue\n",
+    " \n",
+    "        bad_pairs.add((highest_match[\"s\"], highest_match[\"r\"], 0 ))\n",
+    "                # if analyze_strings(highest_match, no_match):\n",
+    "                #     print(f\"{highest_score:.2f}\", highest_match[\"s\"], \"\\t\", highest_match[\"r\"], no_match ,)\n",
     "            # words_not_matching.extend(no_match)\n",
     "            # break\n",
     "# set(words_not_matching)"
@@ -330,127 +276,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "id": "3d5779fd-da1e-480f-973b-423bba422cdf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['0',\n",
-       " '1',\n",
-       " '2',\n",
-       " '2200last',\n",
-       " '3',\n",
-       " '4',\n",
-       " '6',\n",
-       " '9',\n",
-       " 'a',\n",
-       " 'access',\n",
-       " 'accessible',\n",
-       " 'air',\n",
-       " 'allowed',\n",
-       " 'and',\n",
-       " 'apartment',\n",
-       " 'balcony',\n",
-       " 'basic',\n",
-       " 'bath',\n",
-       " 'bathroom',\n",
-       " 'bathrooms',\n",
-       " 'bed',\n",
-       " 'bedroom',\n",
-       " 'bedrooms',\n",
-       " 'beds',\n",
-       " 'bungalow',\n",
-       " 'business',\n",
-       " 'cabin',\n",
-       " 'chalet',\n",
-       " 'city',\n",
-       " 'classic',\n",
-       " 'comfort',\n",
-       " 'companion',\n",
-       " 'complimentary',\n",
-       " 'deluxe',\n",
-       " 'dinner',\n",
-       " 'double',\n",
-       " 'duplex',\n",
-       " 'economy',\n",
-       " 'ensuite',\n",
-       " 'executive',\n",
-       " 'family',\n",
-       " 'first',\n",
-       " 'floor',\n",
-       " 'garden',\n",
-       " 'grand',\n",
-       " 'guest',\n",
-       " 'halfboard',\n",
-       " 'hearing',\n",
-       " 'high',\n",
-       " 'hot',\n",
-       " 'house',\n",
-       " 'included',\n",
-       " 'is',\n",
-       " 'j',\n",
-       " 'jacuzzi',\n",
-       " 'japanese',\n",
-       " 'junior',\n",
-       " 'king',\n",
-       " 'kitchen',\n",
-       " 'luxury',\n",
-       " 'mandatory',\n",
-       " 'menaggio',\n",
-       " 'microwave',\n",
-       " 'mobility',\n",
-       " 'mountain',\n",
-       " 'multiple',\n",
-       " 'netflixdis',\n",
-       " 'no',\n",
-       " 'non',\n",
-       " 'nonsmoking',\n",
-       " 'not',\n",
-       " 'ocean',\n",
-       " 'one',\n",
-       " 'open',\n",
-       " 'or',\n",
-       " 'panoramic',\n",
-       " 'partial',\n",
-       " 'pet',\n",
-       " 'pets',\n",
-       " 'pool',\n",
-       " 'premium',\n",
-       " 'private',\n",
-       " 'quadruple',\n",
-       " 'queen',\n",
-       " 'resort',\n",
-       " 'romantic',\n",
-       " 'room',\n",
-       " 'royal',\n",
-       " 's',\n",
-       " 'sea',\n",
-       " 'shared',\n",
-       " 'signature',\n",
-       " 'single',\n",
-       " 'smoking',\n",
-       " 'sofa',\n",
-       " 'spa',\n",
-       " 'standard',\n",
-       " 'studio',\n",
-       " 'suite',\n",
-       " 'superior',\n",
-       " 'supreme',\n",
-       " 'terrace',\n",
-       " 'third',\n",
-       " 'three',\n",
-       " 'triple',\n",
-       " 'tub',\n",
-       " 'twin',\n",
-       " 'two',\n",
-       " 'view',\n",
-       " 'village',\n",
-       " 'w',\n",
-       " 'waterfront',\n",
-       " 'western',\n",
-       " 'with']"
+       "(52293, 61425)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(good_pairs), len(bad_pairs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a6ef4b33-9444-4eab-ac2b-1c259430ad85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20161, 43648)"
       ]
      },
      "execution_count": 31,
@@ -458,12 +312,171 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "len(good_pairs), len(bad_pairs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "b3ac8d4c-04cc-4694-a5a0-dbdf6e04f74e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20542, 43267)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(good_pairs), len(bad_pairs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "7cce5b91-8180-4921-849d-0db4657906d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('standard double room non smoking schafgarbe',\n",
+       "  'standard double room non smoking schafgarbe',\n",
+       "  1),\n",
+       " ('luxury penthouse 2 bedrooms balcony city view',\n",
+       "  'luxury penthouse 2 bedrooms balcony city view',\n",
+       "  1),\n",
+       " ('room momomonica', 'room momomonica', 1),\n",
+       " ('standard double room upperdeck', 'standard double room upperdeck', 1),\n",
+       " ('superior double room external private bathroom',\n",
+       "  'superior double room external private bathroom',\n",
+       "  1),\n",
+       " ('apartment 2 bedrooms accessible private pool',\n",
+       "  'apartment 2 bedrooms accessible private pool',\n",
+       "  1),\n",
+       " ('executive apartment 2 queen beds', 'executive apartment 2 queen beds', 1),\n",
+       " ('comfort room 2 twin beds annexe', 'comfort room 2 twin beds annexe', 1),\n",
+       " ('basic single private ensuite room', 'basic single private ensuite room', 1),\n",
+       " ('family room balcony', 'family room balcony', 1)]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(good_pairs)[50:60]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "fa64a9c4-6c14-4af1-8dc3-b3394f1d016d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = 0 \n",
+    "same_list = []\n",
+    "diff_list = []\n",
+    "for pair in list(good_pairs):\n",
+    "    a, b,c = pair\n",
+    "    if a != b:\n",
+    "        diff_list.append(pair)\n",
+    "    else:\n",
+    "        same_list.append(pair)\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "d51e6bcd-cac0-4d65-81a9-cff35c43f28a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19735, 807)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(same_list), len(diff_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "31d2edd8-5039-4f94-b2a6-9652cb159d15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "train_positive = random.sample(same_list, 2000- len(diff_list)) + diff_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "6454802a-abf9-4cd0-8bc4-7d3b64ed48c6",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "train_negative = random.sample(list(bad_pairs), 2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "3b67956c-f272-438c-8fca-e88f58d415ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open(\"../data/train.json\", \"w\") as f:\n",
+    "    json.dump({\"train_positive\": train_positive, \"train_negative\": train_negative} , f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "fa491cee-b97a-4fc6-b624-54f6bd142ba1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../data/train.json\", \"r\") as f:\n",
+    "    data_r = json.load(f)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6ef4b33-9444-4eab-ac2b-1c259430ad85",
+   "id": "c326fb5e-347b-4910-a8eb-47fc9c271169",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "data_r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31e457cf-b27a-4bf5-bb62-7b9b81242461",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -485,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
