fix with pre-commit

--- a/notebooks/data.ipynb
+++ b/notebooks/data.ipynb
@@ -78,7 +78,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
+   "id": "d8dffe48-49b3-4a0f-a1f6-05b2f7cf9c07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28638"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(clean_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "3d5a89b8-c18c-4dc0-af8f-83381adbdcfd",
    "metadata": {},
    "outputs": [],
@@ -89,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "cc75776d-2373-4cfb-a2db-057605ee8c04",
    "metadata": {},
    "outputs": [],
@@ -183,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "a664e47b-a9ed-4df4-8db7-dd2e62d3204a",
    "metadata": {},
    "outputs": [],
@@ -224,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "id": "eddea4f6-0fe5-4130-b28c-ce99b7003f82",
    "metadata": {},
    "outputs": [],
@@ -276,17 +297,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
+   "id": "e31ae462-dd29-418c-ac59-ded42b06937d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apartment', 'for', '4', 'people'] ['4']\n",
+      "1.00 {'s': 'apartment for 5 people', 'r': 'apartment for 4 people'} ['4']\n"
+     ]
+    }
+   ],
+   "source": [
+    "supplier = [\"apartment for 5 people\"]\n",
+    "reference = [\"apartment for 4 people\"]\n",
+    "sims = cosine_similarity(vectorizer.transform(supplier), vectorizer.transform(reference))\n",
+    "for i, sup_name in enumerate(supplier):\n",
+    "    highest_score = 0\n",
+    "    highest_match = {}\n",
+    "    for j, ref_name in enumerate(reference):\n",
+    "        if sims[i,j] >= highest_score:\n",
+    "            highest_match = {\"s\": sup_name, \"r\": ref_name}\n",
+    "            highest_score = sims[i,j]\n",
+    "\n",
+    "    if highest_score >= 0.5:# and highest_score<0.9999999999:\n",
+    "        r_words = highest_match[\"r\"].split()\n",
+    "        no_match = [w for w in r_words if w not in highest_match[\"s\"].split()]\n",
+    "        no_match_count = len(no_match)\n",
+    "        for w in no_match:\n",
+    "            if w in ignore_words:\n",
+    "                no_match_count -=1\n",
+    "        print(r_words, no_match)\n",
+    "        if not no_match_count:\n",
+    "            print(f\"{highest_score:.2f}\", highest_match, no_match)\n",
+    "            if analyze_strings(highest_match, no_match):\n",
+    "                print(f\"{highest_score:.2f}\", highest_match[\"s\"], \"\\t\", highest_match[\"r\"], no_match ,)\n",
+    "                good_pairs.add((highest_match[\"s\"], highest_match[\"r\"], 1 ))\n",
+    "                continue\n",
+    "\n",
+    "    bad_pairs.add((highest_match[\"s\"], highest_match[\"r\"], 0 ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "3d5779fd-da1e-480f-973b-423bba422cdf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(52293, 61425)"
+       "(20542, 43267)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "id": "fa64a9c4-6c14-4af1-8dc3-b3394f1d016d",
    "metadata": {},
    "outputs": [],
@@ -396,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "id": "d51e6bcd-cac0-4d65-81a9-cff35c43f28a",
    "metadata": {},
    "outputs": [
@@ -406,7 +472,7 @@
        "(19735, 807)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "id": "31d2edd8-5039-4f94-b2a6-9652cb159d15",
    "metadata": {},
    "outputs": [],
