--- a/notebooks/eda2.ipynb
+++ b/notebooks/eda2.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "5b554351-fece-447f-b063-cd03085e63f1",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "4ec08df3-f7d2-4067-b48e-7f34dc1b78b1",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>lp_id</th><th>data</th></tr><tr><td>str</td><td>list[struct[3]]</td></tr></thead><tbody><tr><td>&quot;lpe9850&quot;</td><td>[{8309229,830922902,&quot;Two-Bedroom Apartment&quot;}]</td></tr><tr><td>&quot;lp10cb27&quot;</td><td>[{13482651,1142731504,&quot;Design Apartment, Multiple Beds&quot;}]</td></tr><tr><td>&quot;lp65574e9e&quot;</td><td>[{11288598,1128859802,&quot;Double or Twin Room with Bathroom&quot;}, {11288598,1128859803,&quot;Triple Room with Private Bathroom&quot;}, … {11288598,1128859806,&quot;Double or Twin Room with Private Bathroom&quot;}]</td></tr><tr><td>&quot;lpa5fb0&quot;</td><td>[{179094,17909402,&quot;Double Room&quot;}, {179094,17909403,&quot;Triple Room&quot;}, {179094,17909408,&quot;Twin Room&quot;}]</td></tr><tr><td>&quot;lp52121&quot;</td><td>[{8800029,880002901,&quot;One-Bedroom Apartment&quot;}]</td></tr></tbody></table></div>"
+       "<small>shape: (5, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>lp_id</th><th>data</th></tr><tr><td>str</td><td>list[struct[3]]</td></tr></thead><tbody><tr><td>&quot;lp993e9&quot;</td><td>[{13947201,1143640765,&quot;Standard Room&quot;}, {13947201,1143640808,&quot;Executive Penthouse&quot;}, … {13947201,1143640906,&quot;Executive Room&quot;}]</td></tr><tr><td>&quot;lpc355a&quot;</td><td>[{13815241,1143383965,&quot;Condo, Multiple Beds, Lake View (Lakeside 1495)&quot;}]</td></tr><tr><td>&quot;lp96db5&quot;</td><td>[{9637251,963725102,&quot;Holiday Home&quot;}]</td></tr><tr><td>&quot;lp656c5854&quot;</td><td>[{13936281,1143592316,&quot;House, 3 Bedrooms&quot;}]</td></tr><tr><td>&quot;lp32223&quot;</td><td>[{1337173,133717301,&quot;One-Bedroom Apartment with Balcony&quot;}]</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (5, 2)\n",
@@ -293,15 +293,15 @@
        "│ ---        ┆ ---                             │\n",
        "│ str        ┆ list[struct[3]]                 │\n",
        "╞════════════╪═════════════════════════════════╡\n",
-       "│ lpe9850    ┆ [{8309229,830922902,\"Two-Bedro… │\n",
-       "│ lp10cb27   ┆ [{13482651,1142731504,\"Design … │\n",
-       "│ lp65574e9e ┆ [{11288598,1128859802,\"Double … │\n",
-       "│ lpa5fb0    ┆ [{179094,17909402,\"Double Room… │\n",
-       "│ lp52121    ┆ [{8800029,880002901,\"One-Bedro… │\n",
+       "│ lp993e9    ┆ [{13947201,1143640765,\"Standar… │\n",
+       "│ lpc355a    ┆ [{13815241,1143383965,\"Condo, … │\n",
+       "│ lp96db5    ┆ [{9637251,963725102,\"Holiday H… │\n",
+       "│ lp656c5854 ┆ [{13936281,1143592316,\"House, … │\n",
+       "│ lp32223    ┆ [{1337173,133717301,\"One-Bedro… │\n",
        "└────────────┴─────────────────────────────────┘"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "8a7978e4-6f91-4398-869e-76585d268f0e",
    "metadata": {},
    "outputs": [
@@ -333,24 +333,24 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>lp_id</th><th>data</th></tr><tr><td>str</td><td>list[struct[4]]</td></tr></thead><tbody><tr><td>&quot;lp5c147&quot;</td><td>[{1245621,377159,201528894,&quot;Triple Room&quot;}, {1252237,377159,201528891,&quot;Double Room&quot;}]</td></tr><tr><td>&quot;lp21a66b&quot;</td><td>[{1276118,2205291,214820254,&quot;Deluxe Double or Twin Room&quot;}, {1285246,2205291,214947356,&quot;Deluxe Room&quot;}]</td></tr><tr><td>&quot;lp7d0c7&quot;</td><td>[{2278,512199,201019944,&quot;Studio, Sea View&quot;}, {15017,512199,316140203,&quot;Apartment&quot;}]</td></tr><tr><td>&quot;lp4f739&quot;</td><td>[{2210406,325433,441657,&quot;Suite, 2 Bedrooms&quot;}, {2219661,325433,441656,&quot;Studio, 1 King Bed with Sofa bed&quot;}, {2228289,325433,214026116,&quot;Suite, 1 Bedroom&quot;}]</td></tr><tr><td>&quot;lp1c43f&quot;</td><td>[{2212835,115775,321243873,&quot;Room, 2 Queen Beds, Non Smoking (Pet Friendly)&quot;}, {2221246,115775,229229496,&quot;Executive Room, 1 King Bed (Level)&quot;}, … {2254640,115775,321243879,&quot;Family Suite, Multiple Beds, Non Smoking (1 King Bed, 2 Queen Beds)&quot;}]</td></tr></tbody></table></div>"
+       "<small>shape: (5, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>lp_id</th><th>data</th></tr><tr><td>str</td><td>list[struct[4]]</td></tr></thead><tbody><tr><td>&quot;lp655710b1&quot;</td><td>[{1453747,1700204721,314109329,&quot;Apartment&quot;}]</td></tr><tr><td>&quot;lp365212&quot;</td><td>[{665895,3559954,213635407,&quot;Standard Twin Room&quot;}, {671749,3559954,213638787,&quot;Superior Double Room&quot;}]</td></tr><tr><td>&quot;lp43c54&quot;</td><td>[{363542,277588,498859,&quot;Grand Room&quot;}, {371549,277588,200276819,&quot;Junior Suite&quot;}, … {386781,277588,394605,&quot;Deluxe King Room&quot;}]</td></tr><tr><td>&quot;lp6555685d&quot;</td><td>[{356534,1700096093,217285171,&quot;Apartment, 2 Bedrooms&quot;}]</td></tr><tr><td>&quot;lp65573e04&quot;</td><td>[{694082,1700216324,314450992,&quot;Apartment&quot;}]</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (5, 2)\n",
-       "┌──────────┬─────────────────────────────────┐\n",
-       "│ lp_id    ┆ data                            │\n",
-       "│ ---      ┆ ---                             │\n",
-       "│ str      ┆ list[struct[4]]                 │\n",
-       "╞══════════╪═════════════════════════════════╡\n",
-       "│ lp5c147  ┆ [{1245621,377159,201528894,\"Tr… │\n",
-       "│ lp21a66b ┆ [{1276118,2205291,214820254,\"D… │\n",
-       "│ lp7d0c7  ┆ [{2278,512199,201019944,\"Studi… │\n",
-       "│ lp4f739  ┆ [{2210406,325433,441657,\"Suite… │\n",
-       "│ lp1c43f  ┆ [{2212835,115775,321243873,\"Ro… │\n",
-       "└──────────┴─────────────────────────────────┘"
+       "┌────────────┬─────────────────────────────────┐\n",
+       "│ lp_id      ┆ data                            │\n",
+       "│ ---        ┆ ---                             │\n",
+       "│ str        ┆ list[struct[4]]                 │\n",
+       "╞════════════╪═════════════════════════════════╡\n",
+       "│ lp655710b1 ┆ [{1453747,1700204721,314109329… │\n",
+       "│ lp365212   ┆ [{665895,3559954,213635407,\"St… │\n",
+       "│ lp43c54    ┆ [{363542,277588,498859,\"Grand … │\n",
+       "│ lp6555685d ┆ [{356534,1700096093,217285171,… │\n",
+       "│ lp65573e04 ┆ [{694082,1700216324,314450992,… │\n",
+       "└────────────┴─────────────────────────────────┘"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,51 +368,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "id": "f878670b-6171-4feb-883d-e557f2b4d05a",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div><style>\n",
-       ".dataframe > thead > tr,\n",
-       ".dataframe > tbody > tr {\n",
-       "  text-align: right;\n",
-       "  white-space: pre-wrap;\n",
-       "}\n",
-       "</style>\n",
-       "<small>shape: (28_638, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>lp_id</th><th>data</th><th>data_right</th></tr><tr><td>str</td><td>list[struct[3]]</td><td>list[struct[4]]</td></tr></thead><tbody><tr><td>&quot;lp65575730&quot;</td><td>[{13847666,1143480847,&quot;House, 4 Bedrooms&quot;}]</td><td>[{1599597,1700222768,315452791,&quot;House, 4 Bedrooms&quot;}]</td></tr><tr><td>&quot;lp9b53a&quot;</td><td>[{1465194,146519401,&quot;One-Bedroom Apartment with Terrace&quot;}, {1465194,146519402,&quot;One-Bedroom Apartment with Terrace and Sea View&quot;}]</td><td>[{288940,636218,201710916,&quot;Double Room Single Use&quot;}, {296677,636218,201710914,&quot;Double or Twin Room&quot;}, … {312460,636218,201710920,&quot;Quadruple Room&quot;}]</td></tr><tr><td>&quot;lp6558b785&quot;</td><td>[{13529702,1142785417,&quot;Condo, 1 Queen Bed with Sofa bed, Kitchen&quot;}]</td><td>[{1365945,1700312965,321189698,&quot;Condo, 1 Queen Bed with Sofa bed, Kitchen&quot;}]</td></tr><tr><td>&quot;lp50aab&quot;</td><td>[{9337009,933700901,&quot;Two-Bedroom Apartment&quot;}]</td><td>[{933334,330411,200272195,&quot;Double Room&quot;}, {938583,330411,200272196,&quot;Twin Room&quot;}, … {946027,330411,200272197,&quot;Triple Room&quot;}]</td></tr><tr><td>&quot;lp279f4a&quot;</td><td>[{13634128,1142334218,&quot;Room&quot;}, {13634128,1142334232,&quot;Double Room&quot;}, {13634128,1141853821,&quot;Single Room&quot;}]</td><td>[{1421806,2596682,220262083,&quot;Room&quot;}, {1431333,2596682,220295766,&quot;Double Room&quot;}, {1434821,2596682,220295716,&quot;Single Room&quot;}]</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>&quot;lp60aea&quot;</td><td>[{13600217,1142036949,&quot;Deluxe Apartment - Private Pool&quot;}, {13600217,1142036960,&quot;Standard Studio&quot;}, … {13600217,1142037006,&quot;Superior Apartment, 1 Bedroom, Lanai&quot;}]</td><td>[{1368650,396010,200375117,&quot;Standard Studio&quot;}, {1373282,396010,200375118,&quot;Standard Apartment, 1 Bedroom&quot;}, … {2810286,396010,321662224,&quot;Deluxe Apartment - Private Pool&quot;}]</td></tr><tr><td>&quot;lpc2f57&quot;</td><td>[{1459666,145966601,&quot;Loft&quot;}]</td><td>[{324140,798551,202379790,&quot;Double Room, Balcony&quot;}, {328324,798551,202379947,&quot;Small Double Room, Balkony&quot;}]</td></tr><tr><td>&quot;lp6554b1ef&quot;</td><td>[{13840294,1143461488,&quot;Villa, 3 Bedrooms&quot;}]</td><td>[{1845035,1700049391,232861014,&quot;Villa, 3 Bedrooms&quot;}]</td></tr><tr><td>&quot;lp6558cf80&quot;</td><td>[{13714783,1142678807,&quot;Executive House, 3 Bedrooms, Non Smoking, Kitchen&quot;}]</td><td>[{1944957,1700319104,321428105,&quot;Executive House, 3 Bedrooms, Non Smoking, Kitchen&quot;}]</td></tr><tr><td>&quot;lp60801&quot;</td><td>[{13591826,1142845202,&quot;Royal Suite&quot;}, {13591826,1142845214,&quot;Suite&quot;}, … {13591826,1142845236,&quot;Deluxe Room, 1 Double Bed&quot;}]</td><td>[{1625932,395265,200119384,&quot;Deluxe Room, 1 Double Bed&quot;}, {1631768,395265,201203146,&quot;Royal Suite&quot;}, … {1639443,395265,200119391,&quot;Premium Room, 1 Double Bed&quot;}]</td></tr></tbody></table></div>"
-      ],
       "text/plain": [
-       "shape: (28_638, 3)\n",
-       "┌────────────┬─────────────────────────────────┬─────────────────────────────────┐\n",
-       "│ lp_id      ┆ data                            ┆ data_right                      │\n",
-       "│ ---        ┆ ---                             ┆ ---                             │\n",
-       "│ str        ┆ list[struct[3]]                 ┆ list[struct[4]]                 │\n",
-       "╞════════════╪═════════════════════════════════╪═════════════════════════════════╡\n",
-       "│ lp65575730 ┆ [{13847666,1143480847,\"House, … ┆ [{1599597,1700222768,315452791… │\n",
-       "│ lp9b53a    ┆ [{1465194,146519401,\"One-Bedro… ┆ [{288940,636218,201710916,\"Dou… │\n",
-       "│ lp6558b785 ┆ [{13529702,1142785417,\"Condo, … ┆ [{1365945,1700312965,321189698… │\n",
-       "│ lp50aab    ┆ [{9337009,933700901,\"Two-Bedro… ┆ [{933334,330411,200272195,\"Dou… │\n",
-       "│ lp279f4a   ┆ [{13634128,1142334218,\"Room\"},… ┆ [{1421806,2596682,220262083,\"R… │\n",
-       "│ …          ┆ …                               ┆ …                               │\n",
-       "│ lp60aea    ┆ [{13600217,1142036949,\"Deluxe … ┆ [{1368650,396010,200375117,\"St… │\n",
-       "│ lpc2f57    ┆ [{1459666,145966601,\"Loft\"}]    ┆ [{324140,798551,202379790,\"Dou… │\n",
-       "│ lp6554b1ef ┆ [{13840294,1143461488,\"Villa, … ┆ [{1845035,1700049391,232861014… │\n",
-       "│ lp6558cf80 ┆ [{13714783,1142678807,\"Executi… ┆ [{1944957,1700319104,321428105… │\n",
-       "│ lp60801    ┆ [{13591826,1142845202,\"Royal S… ┆ [{1625932,395265,200119384,\"De… │\n",
-       "└────────────┴─────────────────────────────────┴─────────────────────────────────┘"
+       "(28638, 3)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "merged_df2 = reference_csv_grouped2.join(rooms_csv_grouped2, on=\"lp_id\", how=\"inner\")\n",
-    "merged_df2\n"
+    "merged_df2.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6145b1d1-2a66-432c-b270-b41755dfdd07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(40011, 3)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df2 = reference_csv_grouped2.join(rooms_csv_grouped2, on=\"lp_id\", how=\"left\")\n",
+    "merged_df2.shape"
    ]
   },
   {
